# Django-Template

./: .gitignore  Dockerfile.celery  Dockerfile.dev  Dockerfile.prod  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.dev.sh  docker-entrypoint.prod.sh  manage.py  pyproject.toml
config/: celery.py  urls.py
config/settings/: base.py  local.py  production.py
